[tool.poetry]
name = "lang-graph"
version = "0.1.0"
description = ""
authors = ["Thomás Freire <thomas.fsr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
streamlit = "^1.37.1"
langchainhub = "^0.1.21"
ipykernel = "^6.29.5"
matplotlib = "^3.9.2"
langchain-groq = "^0.2.0"
langgraph = "0.2.21"
langchain = "^0.3.0"
langchain-openai = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
